=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 v1.021 - Under Development

=over

=item *

Fixed Krang::User to not load Krang::Group unless it needs to interact
with groups.  This is needed because Krang::Script now uses
Krang::User to run as the 'system' user.  Loading Krang::Group will
cause Krang to load its element libraries, which isn't always a good
thing to do. [Sam]

=back

=head2 v1.020 - Jun 28, 2004

=over

=item *

Fixed bug in Krang::ElementClass::Date which prevented the default
method from returning the current date. [Sam]

=item *

Upgraded HTML::Template to the latest release, 2.7, to fix a bug where
a stale template could be returned from the cache under unusual
circumstances. [Sam]

=item *

Fixed a bug in the installer which prevented installing using an
element set contained within an add-on. [Sam]

=item *

Added the ability to pass a filename to Krang::ElementClass's
find_template() method.  [Matt]

=item *

Fixed a bug preventing deletions in the List Admin from working
correctly. [Matt]

=item *

Fixed a bug in the FedoraCore1 platform library that would fail to find
chkconfig unless it was in the user's PATH. [Sam]

=item *

Fixed a bug where elements using the default Krang::ElementClass
input_form() implementation would eventually cause browsers to slow to
a crawl and eventually crash.  The whole sordid tale is here:
http://perlmonks.org/index.pl?node_id=363214 [Sam]

=item *

Fixed a bug where clicking Publish on the Edit Media screen didn't
save changes. [Sam]

=item *

Fixed a bug where a story that failed to publish would still get a
'published' log entry.  [Sam]

=item *

Added support for Fedora Core 2. [Sam]

=item *

Fixed problem determining C<KRANG_ROOT> on Fedora Core 2 in all
Krang scripts. [Sam]

=back

=head2 v1.019 - Jun 04, 2004

=over

=item *

Fixed bug where C<krang_export> could only write output in directories